--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ header h2 {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;      
+    height: 100%;
     z-index: -1;
 }
 
@@ -277,6 +277,26 @@ header h2 {
     transition: 0.5s;
 }
 
+#bookkeeping {
+    background: #08e1ae;
+}
+
+#bookkeeping img {
+    display: none;
+    width: 50%;
+    margin: -10vh auto 40px auto;
+    transition: 0.5s;
+}
+
+#bookkeeping p {
+    display: none;
+    font-size: 0.9em;
+    margin: -15vh auto 0 auto;
+    height: 50px;
+    transition: 0.5s;
+}
+
+
 #tipsy {
     background: #ea6c71;
 }
@@ -415,5 +435,3 @@ header h2 {
     height: 50px;
     transition: 0.5s;
 }
-
-
