--- a/styles.css
+++ b/styles.css
@@ -194,25 +194,18 @@ header h2 {
     max-width: 100px;
 }
 
-#outpost20 {
-    background: #222;
+#ctfnation {
+    background: #e7b425;
 }
 
-#outpost20 h2 {
+#ctfnation  img {
     display: none;
-    width: 100%;
-    height: 50px;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    font-size: 1.5em;
-    margin: 20vh auto 0 auto;
-    color: #fff;
-    z-index: 9;
+    width: 70%;
+    margin: -10vh auto 40px auto;
     transition: 0.5s;
 }
 
-#outpost20 p {
+#ctfnation  p {
     display: none;
     font-size: 0.9em;
     margin: -10vh auto 0 auto;
