--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,14 @@ header h2 {
     transition: 0.5s;
 }
 
+#ctfnation  p .label {
+    display: none;
+    font-size: 1.4em;
+    margin: -14vh auto 0 auto;
+    height: 50px;
+    transition: 0.5s;
+}
+
 #ctfnation  p {
     display: none;
     font-size: 0.9em;
